# tuigreet

./: .rustfmt.toml  Cargo.toml  README.md
contrib/: example.config.toml
contrib/man/: tuigreet-1.scd
nix/tests/: default.nix
src/: event.rs  greeter.rs  info.rs  ipc.rs  keyboard.rs  macros.rs  main.rs  output.rs  power.rs  types.rs  watcher.rs
src/config/: env.rs  mod.rs  parser.rs  schema.rs  theme.rs
src/integration/: display.rs  mod.rs
src/integration/common/: mod.rs  output.rs
src/theme/: style.rs
src/ui/: command.rs  mod.rs  processing.rs  prompt.rs  sessions.rs  tests.rs  util.rs
src/ui/common/: masked.rs
