[package]
name = "tuigreet"
version = "0.9.3"
authors = [
  "Antoine POPINEAU <antoine@popineau.eu>",
  "NotAShelf <raf@notashelf.dev",
]
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.91.0"
repository = "https://github.com/notashelf/tuigreet"

[lib]
name = "tuigreet"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "tuigreet"
path = "src/main.rs"

[features]
default = []
nsswrapper = []

[dependencies]
ansi-to-tui = "7.0.0"
chrono = { version = "0.4.42", features = ["unstable-locales"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
getopts = "0.2.24"
greetd_ipc = { version = "0.10.3", features = ["tokio-codec"] }
i18n-embed = { version = "0.16.0", features = [
  "desktop-requester",
  "fluent-system",
] }
i18n-embed-fl = "0.10.0"
libc = "0.2.182"
nix = { version = "0.31.1", features = ["feature"] }
tui = { package = "ratatui", version = "0.29.0", default-features = false, features = [
  "crossterm",
  "unstable",
] }
rust-embed = "8.9.0"
rust-ini = "0.21.3"
tokio = { version = "1.48.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "net",
  "sync",
  "time",
  "process",
] }
unic-langid = "0.9.6"
zeroize = "1.8.2"
uzers = "0.12.2"
rand = "0.10.0"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
utmp-rs = "0.4.0"
toml = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }
dirs = "6.0.0"
notify = { version = "8.2.0", features = ["macos_fsevent"] }

[dev-dependencies]
greetd-stub = "0.3.0"
tempfile = "3.10.1"
unicode-width = "0.2.0"

[profile.release]
lto = true
